--- a/css/base.css
+++ b/css/base.css
@@ -13,9 +13,8 @@
 }
 
 .flier > * {
-/* Adjust animation duration to change the element’s speed */
-        animation: fly 50s linear infinite;
-        pointer-events: none !important;
+	animation: fly 50s linear infinite;
+	pointer-events: none !important;
 	top: 0;
 	left: 0;
 	transform: translateX(-120%) translateY(-120%) rotateZ(0);
@@ -29,38 +28,14 @@
 
 @keyframes fly {
 
-	98.001%, 0% {
-                display: block;
-		transform: translateX(-200%) translateY(100vh) rotateZ(0deg)
-	}
-
-	15% {
-		transform: translateX(100vw) translateY(-100%) rotateZ(180deg)
-	}
-
-	15.001%, 18% {
-		transform: translateX(100vw) translateY(-30%) rotateZ(0deg)
-	}
-
-	40% {
-		transform: translateX(-200%) translateY(3vh) rotateZ(-180deg)
-	}
-
-	40.001%, 43% {
-		transform: translateX(-200%) translateY(-100%) rotateZ(-180deg)
-	}
-
-	65% {
-		transform: translateX(100vw) translateY(50vh) rotateZ(0deg)
-	}
-
-	65.001%, 68% {
-		transform: translateX(20vw) translateY(-200%) rotateZ(180deg)
-	}
-
-	95% {
-		transform: translateX(10vw) translateY(100vh) rotateZ(0deg)
-	}
+	98.001%, 0% {display: block;transform: translateX(-200%) translateY(100vh) rotateZ(0deg)}
+	15% {transform: translateX(100vw) translateY(-100%) rotateZ(180deg)}
+	15.001%, 18% {transform: translateX(100vw) translateY(-30%) rotateZ(0deg)}
+	40% {transform: translateX(-200%) translateY(3vh) rotateZ(-180deg)}
+	40.001%, 43% {transform: translateX(-200%) translateY(-100%) rotateZ(-180deg)}
+	65% {transform: translateX(100vw) translateY(50vh) rotateZ(0deg)}
+	65.001%, 68% {transform: translateX(20vw) translateY(-200%) rotateZ(180deg)}
+	95% {transform: translateX(10vw) translateY(100vh) rotateZ(0deg)}
 }
 
 
@@ -92,11 +67,11 @@ body {
   90% { transform:translate(-10%, 10%); }
 }
 
-a {
-	text-decoration: none;
-	color: var(--color-link);
-	outline: none;
-}
+a:link {
+	text-decoration: none ;
+  }
+
+
 
 #bio
 {
@@ -104,6 +79,7 @@ a {
 	border-bottom-style: solid;
 	border-bottom-width: 2px;
 	border-bottom-color: rgb(0, 0, 0);
+
 }
 
 a:hover,
@@ -145,7 +121,7 @@ a:focus {
 	display: inline-block;
 	cursor: crosshair;
 	position: relative;
-	-webkit-text-stroke: 0.1vw rgb(0, 0, 255);
+	-webkit-text-stroke: 2px rgb(0, 0, 255);
 	text-stroke: 1.5px rgb(255, 255, 255);
 	-webkit-text-fill-color: transparent;
 	text-fill-color: rgb(0, 255, 0);
